--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
       <%= link_to current_user.email, edit_user_registration_path %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       <br>
+      Stripe Customer ID: <%= current_user.stripe_customer_id %>
+      <br>
       Plan: <%= current_user.plan %>
       <br>
       Subscription: <%= current_user.subscription_status %>
